Rename and redirect urls to be seasonX/episodeX/  (#96)
* Rename and redirect urls to be seasonX/episodeX/

* Rename files to reflect season/episode

* Re-org image files to match season/epiosde/ naming

* Add season summary pages

--- a/content/episodes/2017-05-25-S01E00-trailer.md
+++ b/content/episodes/2017-05-25-S01E00-trailer.md
@@ -7,9 +7,13 @@ mp3: "https://tracking.feedpress.it/link/17512/6384462/a89abdf8.mp3"
 number: 0
 ogdescription: "Introducing IRL: Because Online Life is Real Life"
 ogtitle: "Episode 0: Introducing IRL"
+season: 1
+seasonepisode: 0
 shownotes: |
     For behind-the-scenes video of IRL Trailer production, and a bit more about why we're making this podcast, check out our [blog](http://blog.mozilla.org/internetcitizen/2017/06/19/introducing-irl-original-podcast-mozilla/).
-url: /episode0/
+url: /season1/episode0/
+aliases:
+    - /episode0/
 title: "Introducing IRL: Because Online Life is Real Life"
 transcript: |
     **Speaker 1:** They want to deliver fast amounts of information over the internet, and again, the internet is a series of tubes, tubes, tubes.
