Update social sharing text
- Standardizes episode prefix as "IRL Podcast:"
- Removes season and episode from Twitter share text
-

Closes https://github.com/mozilla/irlpodcast/issues/107

--- a/content/episodes/2018-01-08-S02E01-bot-or-not.md
+++ b/content/episodes/2018-01-08-S02E01-bot-or-not.md
@@ -6,7 +6,7 @@ embed: "17f3cc4b"
 mp3: "https://tracking.feedpress.it/link/17512/7983958/17f3cc4b.mp3"
 number: 8
 ogdescription: "Most website visitors aren’t human. They’re bots. Here’s how to spot them."
-ogtitle: "Episode 8: Bot Or Not"
+ogtitle: "Bot Or Not"
 season: 2
 seasonepisode: 1
 shownotes: |
