--- a/content/episodes/2018-03-05-S02E05-algorisky.md
+++ b/content/episodes/2018-03-05-S02E05-algorisky.md
@@ -7,7 +7,7 @@ embed: "afafa89f"
 mp3: "https://tracking.feedpress.it/link/17512/8459340/afafa89f.mp3"
 number: 12
 ogdescription: "When bad code spreads disinformation and bias, it’s never something that “the algorithm did.” It’s something people did."
-ogtitle: "Episode 12: Algorisky"
+ogtitle: "Algorisky"
 season: 2
 seasonepisode: 5
 shownotes: "Algorithms aren’t neutral. They’re really just recipes; expressions of human intent. That means it’s up to us to build the algorithms we want. [Read more on how we can make algorithms more accountable](https://blog.mozilla.org/netpolicy/2017/10/23/mozillas-comments-uk-algorithms-inquiry/)."
