--- a/content/episodes/2018-07-16-S03E02-press-play.md
+++ b/content/episodes/2018-07-16-S03E02-press-play.md
@@ -6,7 +6,7 @@ embed: "74071418"
 mp3: "https://dts.podtrac.com/redirect.mp3/audio.simplecast.com/74071418.mp3"
 number: 17
 ogdescription: "One of the most successful recruitment tools the U.S. Army ever made was… a video game? Find out how gaming elements in tech have infiltrated our online and offline lives."
-ogtitle: "IRL Podcast: Press Play"
+ogtitle: "Press Play"
 season: 3
 seasonepisode: 2
 shownotes: |
