--- a/content/episodes/2017-05-25-S01E00-trailer.md
+++ b/content/episodes/2017-05-25-S01E00-trailer.md
@@ -6,7 +6,7 @@ embed: "a89abdf8"
 mp3: "https://tracking.feedpress.it/link/17512/6384462/a89abdf8.mp3"
 number: 0
 ogdescription: "Introducing IRL: Because Online Life is Real Life"
-ogtitle: "Episode 0: Introducing IRL"
+ogtitle: "Introducing IRL"
 season: 1
 seasonepisode: 0
 shownotes: |
