--- a/content/episodes/2017-07-24-S01E03-hack-jobs.md
+++ b/content/episodes/2017-07-24-S01E03-hack-jobs.md
@@ -6,7 +6,7 @@ embed: "558fffa7"
 mp3: "https://tracking.feedpress.it/link/17512/6384459/558fffa7.mp3"
 number: 3
 ogdescription: "This episode of IRL focuses on our internet insecurity. Meet the unsung heroes fighting to keep us safe."
-ogtitle: "Episode 3: Hack Jobs"
+ogtitle: "Hack Jobs"
 season: 1
 seasonepisode: 3
 shownotes: |
