--- a/content/episodes/2018-02-05-S02E03-face-value.md
+++ b/content/episodes/2018-02-05-S02E03-face-value.md
@@ -6,7 +6,7 @@ embed: "10dbc4e6"
 mp3: "https://tracking.feedpress.it/link/17512/8172255/10dbc4e6.mp3"
 number: 10
 ogdescription: "From Snapchat filters to Apple’s Face ID, biometric technology plays a growing role in our everyday lives. What do we actually give up when we upload our face to these apps?"
-ogtitle: "Episode 10: Face Value"
+ogtitle: "Face Value"
 season: 2
 seasonepisode: 3
 shownotes: |
