Add host to episodes, archetype, and share string

--- a/content/episodes/2017-07-24-S01E03-hack-jobs.md
+++ b/content/episodes/2017-07-24-S01E03-hack-jobs.md
@@ -9,6 +9,7 @@ ogdescription: "This episode of IRL focuses on our internet insecurity. Meet the
 ogtitle: "Hack Jobs"
 season: 1
 seasonepisode: 3
+host: "Veronica"
 shownotes: |
     Stay safe online! [Here's more](http://blog.mozilla.org/internetcitizen/2017/07/24/irl-episode-3/) on how to not be a ransomware victim.
 
