--- a/content/episodes/2018-01-08-S02E01-bot-or-not.md
+++ b/content/episodes/2018-01-08-S02E01-bot-or-not.md
@@ -9,6 +9,7 @@ ogdescription: "Most website visitors aren’t human. They’re bots. Here’s h
 ogtitle: "Bot Or Not"
 season: 2
 seasonepisode: 1
+host: "Veronica"
 shownotes: |
     Bots, they’re just like you and me. Except easier to find, especially on Twitter. :) [Here’s a handy guide to spotting bots in social media, plus the answers to the bot-or-not quiz you heard on the episode](https://blog.mozilla.org/internetcitizen/2018/01/08/irl-how-to-spot-a-bot/).
 url: /season2/episode1/
