--- a/content/episodes/2018-02-05-S02E03-face-value.md
+++ b/content/episodes/2018-02-05-S02E03-face-value.md
@@ -9,6 +9,7 @@ ogdescription: "From Snapchat filters to Apple’s Face ID, biometric technology
 ogtitle: "Face Value"
 season: 2
 seasonepisode: 3
+host: "Veronica"
 shownotes: |
     Today, more than half of US adults are recorded in police facial recognition databases. For more on the far-reaching impact of facial recognition tech, [check out our blog](https://blog.mozilla.org/internetcitizen/2018/02/05/irl-face-the-future).
 url: /season2/episode3/
