--- a/content/episodes/2018-07-16-S03E02-press-play.md
+++ b/content/episodes/2018-07-16-S03E02-press-play.md
@@ -9,6 +9,7 @@ ogdescription: "One of the most successful recruitment tools the U.S. Army ever 
 ogtitle: "Press Play"
 season: 3
 seasonepisode: 2
+host: "Veronica"
 shownotes: |
     Ashley Carman is the cohost of the tech podcast, [Why’d You Push That Button?] (https://www.theverge.com/whyd-you-push-that-button)
 
