--- a/content/episodes/2017-05-25-S01E00-trailer.md
+++ b/content/episodes/2017-05-25-S01E00-trailer.md
@@ -9,6 +9,7 @@ ogdescription: "Introducing IRL: Because Online Life is Real Life"
 ogtitle: "Introducing IRL"
 season: 1
 seasonepisode: 0
+host: "Veronica"
 shownotes: |
     For behind-the-scenes video of IRL Trailer production, and a bit more about why we're making this podcast, check out our [blog](http://blog.mozilla.org/internetcitizen/2017/06/19/introducing-irl-original-podcast-mozilla/).
 url: /season1/episode0/
