--- a/content/episodes/2018-03-05-S02E05-algorisky.md
+++ b/content/episodes/2018-03-05-S02E05-algorisky.md
@@ -10,6 +10,7 @@ ogdescription: "When bad code spreads disinformation and bias, it’s never some
 ogtitle: "Algorisky"
 season: 2
 seasonepisode: 5
+host: "Veronica"
 shownotes: "Algorithms aren’t neutral. They’re really just recipes; expressions of human intent. That means it’s up to us to build the algorithms we want. [Read more on how we can make algorithms more accountable](https://blog.mozilla.org/netpolicy/2017/10/23/mozillas-comments-uk-algorithms-inquiry/)."
 url: /season2/episode5/
 aliases:
