Shorten trailer descriptions

--- a/content/episodes/2017-05-25-S01E00-trailer.md
+++ b/content/episodes/2017-05-25-S01E00-trailer.md
@@ -5,7 +5,7 @@ description: "Our online life **is** real life. We walk, talk, work, and even lo
 embed: "a89abdf8"
 mp3: "https://tracking.feedpress.it/link/17512/6384462/a89abdf8.mp3"
 number: 0
-ogdescription: "Introducing IRL: Because Online Life is Real Life"
+ogdescription: "Introducing IRL"
 ogtitle: "Introducing IRL"
 season: 1
 seasonepisode: 0
@@ -15,7 +15,7 @@ shownotes: |
 url: /season1/episode0/
 aliases:
     - /episode0/
-title: "Introducing IRL: Because Online Life is Real Life"
+title: "Introducing IRL"
 transcript: |
     **Speaker 1:** They want to deliver fast amounts of information over the internet, and again, the internet is a series of tubes, tubes, tubes.
 
